<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfoSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="loginBtn">登录</string>
    <string name="registerBtn">注册</string>
    <string name="downloadBtn">下载文件</string>
    <string name="uploadBtn">上传文件</string>
    <string name="infoSearchBtn">图书查询</string>
    <string name="selectBtn">选择</string>
    <string name="passwordRepeat">重复密码</string>
    <string name="email">邮箱</string>
    <string name="birth">生日</string>
    <string name="mobile">手机</string>

</resources>
