<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/menu_downloadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/downloadBtn" />

    <Button
        android:id="@+id/menu_uploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadBtn" />

    <Button
        android:id="@+id/menu_infoSearchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infoSearchBtn" />

</LinearLayout>
